--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,4 +1,14 @@
+name-template: 'v$NEXT_MINOR_VERSION'
+tag-template: 'v$NEXT_MINOR_VERSION'
+categories:
+  - title: '🚀 Features'
+    label: 'enhancement'
+  - title: '🐛 Hotfixes'
+    label: 'bug'
+  - title: 'ETC'
+    label: 'documentation'
+change-template: '- $TITLE #$NUMBER @$AUTHOR '
 template: |
-  ## What’s Changed
-
+  ## Uncategorized
   $CHANGES
+  ### Bump setup.py version must be included here!
