format relese note

--- a/.github/release-drafter-config.yml
+++ b/.github/release-drafter-config.yml
@@ -7,8 +7,8 @@ categories:
     label: 'bug'
   - title: 'ETC'
     label: 'documentation'
-change-template: '- $TITLE #$NUMBER @$AUTHOR '
+change-template: '- $TITLE #$NUMBER  '
 template: |
-  ## Uncategorized
+  ### Uncategorized
   $CHANGES
-  ### Bump setup.py version must be included here!
+  
