--- a/.github/release-drafter-config.yml
+++ b/.github/release-drafter-config.yml
@@ -2,13 +2,19 @@ name-template: 'v$NEXT_MINOR_VERSION'
 tag-template: 'v$NEXT_MINOR_VERSION'
 categories:
   - title: '🚀 Features'
-    label: 'enhancement'
-  - title: '🐛 Hotfixes'
-    label: 'bug'
-  - title: 'ETC'
-    label: 'documentation'
+    labels:
+      - 'feature'
+      - 'enhancement'
+  - title: '🐛 Bug Fixes'
+    labels:
+      - 'fix'
+      - 'bugfix'
+      - 'bug'
+  - title: '🧰 Maintenance'
+    label: 'chore'
 change-template: '- $TITLE #$NUMBER  '
 template: |
-  ### Uncategorized
+  ## Changes
+  
   $CHANGES
   
